--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 #header{
-  width: 100%;
-  height: 50px;
-  background-color: #fff;
+ background-color: rgba(0, 0, 0, 0.5); 
   margin-bottom: 10px;
+  height: 50px;
+  width: 100%; 
+
 }
 header a.button {
   background-color: #fff;
@@ -36,4 +37,21 @@ main {
 clear: both;
 font-family: fantasy;
 text-transform: uppercase;
+}
+.container {
+    position: relative;
+    text-align: center;
+    color: white;
+}
+.container img {
+ filter: opacity(60%);
+}
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+font-family: fantasy;
+font-size: 100px;
+color: #474747;
 }
