--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@
   margin-bottom: 10px;
   height: 50px;
   width: 100%; 
-
 }
 header a.button {
   background-color: #fff;
@@ -54,4 +53,34 @@ text-transform: uppercase;
 font-family: fantasy;
 font-size: 100px;
 color: #474747;
+}
+.featured-products img{
+display: inline-block;
+}
+.featured-products p{
+display: inline-block;
+position: absolute;
+left: 30%;
+font-size: 30px;
+}
+.featured-products button{
+background-color: #000;
+color: #fff;
+padding: 20px;
+ text-align: center;
+  text-decoration: none;
+font-size: 25px;
+font-family: fantasy;
+text-transform: uppercase;
+border-radius: 10px;
+position: relative;
+top: -350px;
+left: 35px;
+border: none;
+}
+.featured-products button:hover{
+  background-color: #8D8D8D;
+}
+.featured-products button:active{
+background-color: #595959;
 }
