--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ position: absolute;
 left: 30%;
 font-size: 30px;
 }
-.featured-products button{
+.featured-products a.button{
 background-color: #000;
 color: #fff;
 padding: 20px;
@@ -78,9 +78,99 @@ top: -350px;
 left: 35px;
 border: none;
 }
-.featured-products button:hover{
+.featured-products a.button:hover{
   background-color: #8D8D8D;
 }
-.featured-products button:active{
+.featured-products a.button:active{
+background-color: #595959;
+}
+.featured-products-2 img{
+display: inline-block;
+}
+.featured-products-2 p{
+display: inline-block;
+position: absolute;
+left: 30%;
+font-size: 30px;
+}
+.featured-products-2 a.button{
+background-color: #000;
+color: #fff;
+padding: 20px;
+ text-align: center;
+  text-decoration: none;
+font-size: 25px;
+font-family: fantasy;
+text-transform: uppercase;
+border-radius: 10px;
+position: relative;
+top: -350px;
+left: 35px;
+border: none;
+}
+.featured-products-2 a.button:hover{
+  background-color: #8D8D8D;
+}
+.featured-products-2 a.button:active{
+background-color: #595959;
+}
+.featured-products-3 img{
+display: inline-block;
+}
+.featured-products-3 p{
+display: inline-block;
+position: absolute;
+left: 30%;
+font-size: 30px;
+}
+.featured-products-3 a.button{
+background-color: #000;
+color: #fff;
+padding: 20px;
+ text-align: center;
+  text-decoration: none;
+font-size: 25px;
+font-family: fantasy;
+text-transform: uppercase;
+border-radius: 10px;
+position: relative;
+top: -350px;
+left: 35px;
+border: none;
+}
+.featured-products-3 a.button:hover{
+  background-color: #8D8D8D;
+}
+.featured-products-3 a.button:active{
+background-color: #595959;
+}
+.featured-products-4 img{
+display: inline-block;
+}
+.featured-products-4 p{
+display: inline-block;
+position: absolute;
+left: 30%;
+font-size: 30px;
+}
+.featured-products-4 a.button{
+background-color: #000;
+color: #fff;
+padding: 20px;
+ text-align: center;
+  text-decoration: none;
+font-size: 25px;
+font-family: fantasy;
+text-transform: uppercase;
+border-radius: 10px;
+position: relative;
+top: -350px;
+left: 35px;
+border: none;
+}
+.featured-products-4 a.button:hover{
+  background-color: #8D8D8D;
+}
+.featured-products-4 a.button:active{
 background-color: #595959;
 }
