Update and rename styles.css to page1.css

--- a/page1.css
+++ b/page1.css
@@ -77,6 +77,7 @@ position: relative;
 top: -350px;
 left: 35px;
 border: none;
+cousor: pointer;
 }
 .featured-products a.button:hover{
   background-color: #8D8D8D;
