--- a/page1.css
+++ b/page1.css
@@ -36,6 +36,7 @@ main {
 clear: both;
 font-family: fantasy;
 text-transform: uppercase;
+background-attachmend: fixed;
 }
 .container {
     position: relative;
@@ -151,7 +152,7 @@ display: inline-block;
 .featured-products-4 p{
 display: inline-block;
 position: absolute;
-left: 30%;
+left 30%;
 font-size: 30px;
 }
 .featured-products-4 a.button{
@@ -174,4 +175,22 @@ border: none;
 }
 .featured-products-4 a.button:active{
 background-color: #595959;
+}
+footer {
+background-color: #333;
+color: #fff;
+text-align: center;
+padding: 10px 0;
+position: fixed;
+bottom: 0;
+width: 100%;
+}
+body {
+position: relative;
+min-height: 100vh;
+}
+footer {
+position: absolute;
+bottom: 0;
+width: 100%;
 }
