--- a/styles.css
+++ b/styles.css
@@ -67,8 +67,8 @@ font-size: 30px;
 background-color: #000;
 color: #fff;
 padding: 20px;
- text-align: center;
-  text-decoration: none;
+text-align: center;
+text-decoration: none;
 font-size: 25px;
 font-family: fantasy;
 text-transform: uppercase;
@@ -180,7 +180,7 @@ background-color: #333;
 color: #fff;
 text-align: center;
 padding: 10px 0;
-position: fixed;
+position: absolute;
 bottom: 0;
 width: 100%;
 }
@@ -188,8 +188,9 @@ body {
 position: relative;
 min-height: 100vh;
 }
-footer {
-position: absolute;
-bottom: 0;
-width: 100%;
-}
+.contact-info {
+background-color: #fff;
+padding: 30px;
+border-radius: 5px;
+box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+text-align: center;
