--- a/styles.css
+++ b/styles.css
@@ -174,3 +174,8 @@ border: none;
 .featured-products-4 a.button:active{
 background-color: #595959;
 }
+footer {background-color: #333;
+color: #fff;text-align: center;
+padding: 10px 0;position: absolute;
+bottom: 0;width: 100%;
+}
