--- a/styles2.css
+++ b/styles2.css
@@ -120,3 +120,8 @@ left: 55%;
 font-family: fantasy;
 text-transform: uppercase;
 }
+footer {background-color: #333;
+color: #fff;text-align: center;
+padding: 10px 0;position: absolute;
+bottom: 0;width: 100%;
+}
