--- a/styles2.css
+++ b/styles2.css
@@ -28,6 +28,15 @@ nav {
 display: inline-block;
 float: left;
 }
+hr {
+ margin: -30px auto 10px;
+	padding: 0;
+	height: 50px;
+	border: none;
+	border-bottom: 1px solid #1f1209;
+	box-shadow: 0 20px 20px -20px #333;
+	width: 30%;
+}
 main p{
 font-family: fantasy;
 text-transform: uppercase;
